UIUX refactors
